fixed page breaks on print

--- a/static/PythonCheatSheet/sheets-of-paper.css
+++ b/static/PythonCheatSheet/sheets-of-paper.css
@@ -78,7 +78,7 @@ div.page-break {
 /* For top-level headings only */
 h1 {
 	/* Force page breaks after */
-	page-break-before: always;
+	/* page-break-before: always; */
 }
 /* For all headings */
 h1, h2, h3, h4, h5, h6 {
